k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
    - port: 80         
      targetPort: 4499 
      nodePort: 32499
